tests/functional/lang/eval-fail/dynamic-attrs-inherit.err.exp
error: dynamic attributes not allowed in inherit
       at /pwd/lang/eval-fail/dynamic-attrs-inherit.nix:5:11:
            4| {
            5|   inherit ${"a" + ""};
             |           ^
            6| }
